<resources>
    <string name="app_name">Food Coach</string>
    <string name="topic">text</string>
    <string name="AddNonVEG_name">Food Name</string>
    <string name="AddNonVEG_des">Description</string>
    <string name="AddNonVEG_ingra">Ingradient</string>
    <string name="AddNonVEG_make">How to make</string>
    <string name="AddVeg_ingra">Ingradient</string>
    <string name="AddVeg_name">Food Name</string>
    <string name="AddVeg_des">Description</string>
    <string name="AddVeg_make">How to make</string>
    <string name="Add_veg">text</string>
    <string name="Add_veg_des">text</string>
    <string name="AddnonVeg_name">text</string>
    <string name="AddnonVeg_des">text</string>
    <string name="AddnonVeg_ing">text</string>
    <string name="AddnonVeg_make">text</string>
    <string name="Addveg_recipe_photo">text</string>
    <string name="AddVegRecipe_post">text</string>
    <string name="Vegrecipe_add">text</string>
    <string name="NonVeg_add">text</string>


    <string name="et_username">Username</string>
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="btn_male">male</string>
    <string name="btn_female">female</string>
    <string name="btn_addmealplan">addmealplan</string>
    <string name="btn_mymealplan">mymealplan</string>
    <string name="btn_addmeal">addmeal</string>
    <string name="btn_1to5">1to5</string>
    <string name="btn_6to17">6to17</string>
    <string name="btn_18t035">18to35</string>
    <string name="btn36to60">36to60</string>
    <string name="btn_above60">above60</string>
    <string name="tv_monday">monday</string>
    <string name="tv_tuesday">tuesday</string>
    <string name="tv_wednesday">wednesday</string>
    <string name="tv_thursday">thursday</string>
    <string name="tv_friday">friday</string>
    <string name="tv_sunday">sunday</string>
    <string name="tv_saturday">saturday</string>
    <string name="tv_breakfast">breakfast</string>
    <string name="tv_lunch">lunch</string>
    <string name="tv_dinner">dinner</string>
    <string name="tv_tea">tea</string>
    <string name="breakfast">Breakfast</string>
</resources>