<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Select_age"
    android:background="@color/black"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#4CAF50"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="Select Age"
        app:titleMargin="4dp"
        app:titleMarginStart="90dp"
        app:titleTextColor="#000000" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="393dp"
        android:layout_height="524dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="195dp"
            android:text="Age"
            android:textColor="#FFFEFE"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btn_6to17"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/btn_1to5"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:text="Between 6 to 17"
            android:textColor="#090909"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="#CDDC39"
            app:iconSize="30dp"
            app:iconTintMode="multiply" />

        <Button
            android:id="@+id/btn_1to5"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/btn_1to5"
            android:text="Between 1 to 5"
            android:textAlignment="center"
            android:textColor="#0B0A0A"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="#CDDC39"
            app:iconSize="30dp"
            app:iconTintMode="multiply" />

        <Button
            android:id="@+id/btn_18to35"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/btn_6to17"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/btn_18t035"
            android:text="Between 18 to 35"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="#CDDC39"
            app:iconSize="30dp"
            app:iconTintMode="multiply" />

        <Button
            android:id="@+id/btn_36to60"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/btn_18to35"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/btn36to60"
            android:text="Between  36 to 60"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="bold"
            app:backgroundTint="#CDDC39"
            app:iconSize="30dp"
            app:iconTintMode="multiply" />

        <Button
            android:id="@+id/btn_above60"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/btn_36to60"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/btn_above60"
            android:text="Above 60"
            android:textColor="#000000"
            android:textSize="16dp"
            android:textStyle="bold"
            app:backgroundTint="#CDDC39"
            app:iconSize="30dp"
            app:iconTintMode="multiply" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="403dp"
        android:layout_height="82dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>