<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Meal_plan"
    android:background="@color/black"
    >

    <RelativeLayout
        android:layout_width="411dp"
        android:layout_height="88dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout7"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="49dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="15dp"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/ic_home_24"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="112dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@+id/imageButton2"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/ic_shopping_bag_24"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="112dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@+id/imageButton3"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/ic_account_circle_24"
            tools:ignore="VectorDrawableCompat" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout7"
        android:layout_width="411dp"
        android:layout_height="292dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout6">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="26dp"
            android:text="Lunch"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="367dp"
            android:layout_height="118dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="89dp"
            android:layout_marginEnd="20dp" >

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/rice" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView31"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="140dp"
            android:layout_marginBottom="35dp"
            android:text="Food"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/ic_create_24"
            tools:ignore="VectorDrawableCompat" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="383dp"
        android:layout_height="82dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/toolbar6">

        <TextView
            android:id="@+id/tv_monday"
            android:layout_width="20dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/tv_monday"
            android:text="MO"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tuesday"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/tv_monday"
            android:hint="@string/tv_tuesday"
            android:text="Tu"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_wednesday"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/tv_tuesday"
            android:hint="@string/tv_wednesday"
            android:text="We"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_thursday"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/tv_wednesday"
            android:hint="@string/tv_thursday"
            android:text="Th"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_friday"
            android:layout_width="12dp"
            android:layout_height="44dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="22dp"
            android:layout_toEndOf="@+id/tv_thursday"
            android:hint="@string/tv_friday"
            android:text="Fr"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_saturday"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/tv_friday"
            android:hint="@string/tv_saturday"
            android:text="Sa"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sunday"
            android:layout_width="16dp"
            android:layout_height="52dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="41dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="14dp"
            android:layout_toEndOf="@+id/tv_saturday"
            android:hint="@string/tv_sunday"
            android:text="Su"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="411dp"
        android:layout_height="292dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout5">

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="26dp"
            android:text="Morning"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="367dp"
            android:layout_height="118dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="89dp"
            android:layout_marginEnd="20dp" >

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/img5l" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView30"
            android:layout_width="140dp"
            android:layout_height="29dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="140dp"
            android:layout_marginBottom="35dp"
            android:text="Food"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/ic_create_24"
            tools:ignore="VectorDrawableCompat" />
    </RelativeLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar6"
        android:layout_width="389dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:background="#4CAF50"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="Meal Plan"
        app:titleMarginStart="90dp"
        app:titleTextColor="#000000" />
</androidx.constraintlayout.widget.ConstraintLayout>